fix: corrigir avisos de qualidade de código e documentação
- README: remover conteúdo duplicado, corrigir formatação Markdown (MD007, MD012, MD022, MD031, MD032, MD040, MD058, MD060)
- AuthenticationController: parametrizar ResponseEntity com tipos genéricos
- UsuarioDTO: substituir @Schema(required=true) depreciado por requiredMode = REQUIRED
- RelatorioService: substituir new Locale() depreciado por Locale.of()
- ProcessoServiceImpl: remover método privado isStatusFinal nunca utilizado
- ProcessoServiceTest: remover import não utilizado (EntityNotFoundException)